Primera entrega proyecto final

--- a/Simulador interactivo/index.html
+++ b/Simulador interactivo/index.html
@@ -1,5 +1,48 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="script.js"></script>
+<!DOCTYPE HTML>
+
+<html>
+
+<head>
+    <title>Ollivander's shop</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="main.css" />
+
+</head>
+
+<body class="is-preload" onload="main()">
+    <div id="page-wrapper">
+
+        <!-- Header -->
+        <div id="header">
+            <img src="Hogsmeade.png">
+            <!-- Nav -->
+            <nav id="nav">
+                <ul>
+                    <li class="current"><a href="index.html">Tienda de Ollivander</a></li>
+
+                </ul>
+            </nav>
+
+        </div>
+
+        <!-- Banner -->
+        <section id="banner">
+            <header>
+                <h2>Contacto: <em>Hogsmeade@gmail.com </em>
+            </header>
+        </section>
+
+
+
+    </div>
+
+    </div>
+
+    <!-- Scripts -->
+    <script src="script.js"></script>
+
+
+</body>
+
+</html>
