desafio sabado pasado

--- a/Simulador interactivo/index.html
+++ b/Simulador interactivo/index.html
@@ -26,6 +26,12 @@
 
         </div>
 
+        <main id="alertas">
+            <p id="mensajes">
+            </p>
+            <button onclick="mostrarMaderas()" id="boton"> Siguiente </button>
+        </main>
+
         <!-- Banner -->
         <section id="banner">
             <header>
@@ -38,9 +44,8 @@
     </div>
 
     </div>
-
-    <!-- Scripts -->
-    <script src="script.js"></script>
+    < <!-- Scripts -->
+        <script src="script.js"></script>
 
 
 </body>
