--- a/Simulador interactivo/index.html
+++ b/Simulador interactivo/index.html
@@ -29,7 +29,11 @@
         <main id="alertas">
             <p id="mensajes">
             </p>
+            <form id="lista"></form>
             <button onclick="mostrarMaderas()" id="boton"> Siguiente </button>
+            <div>Cantidad de varitas
+                <span id="contador">0</span>
+            </div>
         </main>
 
         <!-- Banner -->
