Jquery, Animaciones y AJAX

--- a/Simulador interactivo/index.html
+++ b/Simulador interactivo/index.html
@@ -30,7 +30,7 @@
             <p id="mensajes">
             </p>
             <form id="lista"></form>
-            <button onclick="mostrarMaderas()" id="boton"> Siguiente </button>
+            <button id="boton"> Siguiente </button>
             <div>Cantidad de varitas
                 <span id="contador">0</span>
             </div>
@@ -48,8 +48,10 @@
     </div>
 
     </div>
-    < <!-- Scripts -->
-        <script src="script.js"></script>
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+
 
 
 </body>
